--- a/foundry.toml
+++ b/foundry.toml
@@ -3,5 +3,19 @@ src = "src"
 out = "out"
 libs = ["lib"]
 solc = "0.8.21"
+gas_reports = ["*"]
+fuzz_max_global_rejects = 100000
+
+[fmt]
+line_length = 120
+tab_width = 4
+bracket_spacing = true
+int_types = "long"
+multiline_func_header = "attributes_first"
+quote_style = "double"
+number_underscore = "preserve"
+override_spacing = true
+wrap_comments = false
+ignore = [".github/"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
