test: test deployment for bytecode variance independence

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	"scripts": {
 		"commit": "cz",
 		"coverage": "forge coverage --report lcov && npm run coverage:filter && npx lcov-summary lcov.info",
-		"coverage:filter": "lcov -r lcov.info 'test/*' 'script/*' 'src/dependencies/*' -o lcov.info",
+		"coverage:filter": "lcov -r lcov.info 'test/*' 'src/dependencies/*' -o lcov.info",
 		"format": "forge fmt",
 		"format:check": "forge fmt --check",
 		"lint:check": "solhint --config ./.solhint.json 'src/**/*.sol'",
